--- a/app/views/users/follows/destroy.js.erb
+++ b/app/views/users/follows/destroy.js.erb
@@ -1,1 +1,1 @@
-document.querySelector("#js-event-bookmark-<%= @user.id %>").innerHTML = "<%= j(render 'users/follows/follow', user: @user) %>"
+document.querySelector("#js-user-follow").innerHTML = "<%= j(render 'users/follows/follow', user: @user) %>"
